# slacker-counter

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  prototype.html  vite.config.ts
.harness/: agent.md
.harness/reins/developer/: agent.md
.harness/reins/tester/: agent.md
.harness/reins/ui-reviewer/: agent.md
.trae/documents/: PRD.md  Technical-Architecture.md
electron/: main.cjs  preload.cjs
scripts/: gen-icon.cjs
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/store/: useFishTimerStore.ts
