[package]
name = "slacker-counter"
version = "1.0.0"
description = "上班摸鱼加班计算器"
authors = ["wake"]
edition = "2021"

[lib]
name = "slacker_counter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 优化 release 体积
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
